--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <title>BackpackPacker</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Work+Sans:wght@100..900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-    <script type="module" src="Backpack.js"></script>
+    <script type="module" src="album.js"></script>
     <script type="module" src="script.js"></script>
   </head>
   <body>
     <header class="siteheader">
-      <div class="site-title">What is your title?</div>
-      <div class="site-description">Add a site description</div>
+      <div class="site-title">Liz's Favorite Album</div>
+      <div class="site-description">This is curently my favorite listen. It's been on repate since it was released. </div>
     </header>
     <main class="maincontent">
       <div class="page-header">
-        <h2 class="page-header__heading">Put your own heading</h2>
+        <h2 class="page-header__heading">Universe</h2>
         <p>
-          Put some new text in this space.
+          K-pop boy group NCT has now released their 3rd studio album. This project is part of the NCT 2021 project which all members from several units collaborate to relase music.
         </p>
       </div>
     </main>
